maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:7: error: type mismatch;
 found   : Unit
 required: Int
      cpt=dir
          ^PledgeMaze:30: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
  return dir
  ^